refac(servlet):AP-173 refactor do get switch case